# video-ocr

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  memo.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_key.py  test_video_ocr.py
video_ocr/: __init__.py  cli.py  config.py  execute.py  ocr.py  playlist.py  video.py
